--- a/projeto/POSTOABC.dproj
+++ b/projeto/POSTOABC.dproj
@@ -117,6 +117,10 @@
         <DCCReference Include="model\UBomba.pas"/>
         <DCCReference Include="model\UAbastecimento.pas"/>
         <DCCReference Include="model\interface\UIModel.pas"/>
+        <DCCReference Include="view\UTelaAbastecimento.pas">
+            <Form>fTelaAbastecimento</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
